nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: xyz
spec:
  selector:
    app: xyz
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000
  type: NodePort
